--- a/index.html
+++ b/index.html
@@ -3,9 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project</title>
+    <title>Handy Crew</title>
+    <link rel="icon" type="image/x-icon" href="./assets/Fevicon.jpg">
+    <link href="style.css" rel="stylesheet">
 </head>
-<body>
+<body >
+
+    <div id="wrapper">
+        <!-- NAVIGATION BAR -->
+        <nav class="header">
+            <img src="./assets/logo.jpg" width="">
+        </nav>
+
+
+
+
+
+    </div>
     
 </body>
 </html>
