added new features on nav

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Handy Crew</title>
     <link rel="icon" type="image/x-icon" href="./assets/Fevicon.jpg">
     <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body >
 
@@ -13,6 +14,22 @@
         <!-- NAVIGATION BAR -->
         <nav class="header">
             <img src="./assets/logo.jpg" width="">
+            <div class="nav-items">
+                <ul>
+                    <li>Home</li>
+                    <li>Services</li>
+                    <li>About us</li>
+                    <li>Contact us</li>
+                </ul>
+            </div>
+            <div class="logintab">
+                <a href="">Login</a>
+                <a href="">Sign Up</a>
+            </div>
+            <div class="mode">
+                <i class="fa-solid fa-moon"></i>
+                <i class="fa-solid fa-sun"></i>
+            </div>
         </nav>
 
 
