added login page

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 
                 <!-- LOGIN BUTTON -->
 
-              <div class="btn">Login</div>
+              <a href="login.html" target="_blank"><div class="btn">Login</div></a>
       
              <!-- NIGHT MODE BUTTON -->
 
