added search bar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
     <div id="wrapper">
         <!-- NAVIGATION BAR -->
+
         <nav class="header">
             <img src="./assets/logo.jpg" alt="logo">
             <div class="nav-items">
@@ -44,6 +45,18 @@
            
         </nav>
 
+        <!-- Search bar section -->
+
+        <div class="first-section">
+            <div class="search-section">
+                <img src="./assets/search.svg">
+                <input type="search" placeholder="Search...">
+            </div>
+         <p>
+            "Reimagine Urban Living: Search, Discover, and Thrive – Right at Your Fingertips."</p>
+
+        </div>
+       
 
 
 
