--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/Fevicon.jpg">
     <link href="style.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-   
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 </head>
 <body >
 
@@ -52,8 +52,11 @@
                 <img src="./assets/search.svg">
                 <input type="search" placeholder="Search...">
             </div>
-         <p>
-            "Reimagine Urban Living: Search, Discover, and Thrive – Right at Your Fingertips."</p>
+         <p class="para_sec1">
+            "Get all the <span class="span-txt-1">Essential Services</span> at One place with us"</p>
+            <p class="para_sec1">
+                Book  Professionals for Services like <span class="span-txt-1" id="words">Mechanics</span>
+            </p>
 
         </div>
        
