--- a/login.html
+++ b/login.html
@@ -48,7 +48,7 @@
                 </div>
                 <span>or use your account</span>
                 <div class="infield">
-                    <input type="email" placeholder="Email" name="email"/>
+                    <input type="email" placeholder="Email">
                     <label></label>
                 </div>
                 <div class="infield">
