--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
                 <img src="./assets/search.svg">
                 <input type="search" placeholder="Search...">
             </div>
-         <p class="para_sec1">
+         <p id="para1">
             "Get all the <span class="span-txt-1">Essential Services</span> at One place with us"</p>
-            <p class="para_sec1">
+            <p id="para2">
                 Book  Professionals for Services like <span class="span-txt-1" id="words">Mechanics</span>
             </p>
 
@@ -215,6 +215,38 @@
                 <button class="button" role="button">Know More </button>
               </div>
         </div>
+        <div id="joinus">
+          <h1>Join us as a Skilled professional</h1>
+          <p>You can be a part of our team by working with us as a skilled worker.</p>
+          <p>Earn your livelihood and be your own boss.</p>
+          <div class="btn">
+            Work with us
+          </div>
+        </div>
+
+         <div class="about-tab">
+          <div id="aboutus">
+            <h1 class="heading">ABOUT US</h1>
+            <p>We are the innovators working towards the development for advance and substainable businesses. Our Businesses help the humanity to make their life easy and also save their time and Energy in Efficient Cost.</p>
+            <p>With Handy Crew we offer various services which you need in your day to day life. With us you can get your Work done easily. Also you dont have to think about finding the services because its our responsiblity to find services for you at Efficient cost and in sufficient time.</p>
+            <p>With this initiative we also Work towards the development of lower class unemployed skilled peoples to use their skills to earn their daily incomes, our main aim is to uplift these people, to reduce unemployment and contribute towards our nations Economy #vocalforlocal</p>
+            <div id="numbers-tab">
+              <div class="nums">
+                <h3>100+</h3>
+                <h4>Happy Customers</h4>
+              </div>
+              <div class="nums">
+                <h3>10+</h3>
+                <h4>Trained Professionals</h4>
+              </div>
+              <div class="nums">
+                <h3>5+</h3>
+                <h4>Cities</h4>
+              </div>
+            </div>
+            <h4 id="supportus">Support Us by Purchasing Services from us</h4>
+        </div>
+         </div>
        
 
 
